[project]
name = "pynite-tools"
dynamic = ['version', 'description']
readme = "README.md"
authors = [
    { name = "Connor Ferster", email = "connor@structuralpython.com" }
]

requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.2",
    "plotly>=6.2.0",
    "plotly-3d-primitives>=0.4.0",
    "pydantic_core>=2.41.1",
    "pydantic>=2.12.0",
    "pynitefea==1.6.2",
    "deepmerge>=2.0",
]


[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest"
]
